<resources>
    <string name="app_name">Food2Fork Recipes</string>
    <string name="menu_top_rated">Top Rated</string>
    <string name="menu_most_trending">Most Trending</string>
    <string name="title_activity_details">Recipe Details</string>
    <string name="list_item_image">Image</string>
    <string name="list_item_title">Recipe Title</string>
    <string name="list_item_rank">Rating:</string>
    <string name="details_publisher">Publisher:</string>
    <string name="details_rating">Rating:</string>
    <string name="details_ingredients">Ingredients:</string>
    <string name="details_source_url">URL Link:</string>
    <string name="search_hint">Search</string>
</resources>
