<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ximikdev.android.test.recipesapp.MainActivity">
    <item
        android:id="@+id/sort_rating"
        android:orderInCategory="100"
        android:title="@string/menu_top_rated"
        app:showAsAction="never" />
    <item
        android:id="@+id/sort_trending"
        android:orderInCategory="100"
        android:title="@string/menu_most_trending"
        app:showAsAction="never" />
    <item
        android:id="@+id/search_cancel"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:visible="false"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search_hint"
        app:showAsAction="ifRoom"/>

</menu>
