<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ximikdev.android.test.recipesapp.DetailsActivityFragment"
        tools:showIn="@layout/activity_details">


        <ImageView
            android:id="@+id/details_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/list_item_image" />

        <TextView
            android:id="@+id/details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/details_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_publisher"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/details_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_rating"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/details_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_ingredients"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/details_source_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_source_url"
            android:textAppearance="?android:attr/textAppearanceSmall" />


    </LinearLayout>
</ScrollView>